# Attest_Detection

./: .gitignore  README.md
baseline_reproduction_methods/: README.md
baseline_reproduction_methods/scripts/dsfm/: build_dsfm_hardset_from_bcb_sources.py  build_dsfm_triplets_from_processed_dataset.py  build_gcj_dsfm_adapter_projection.py  build_ojclone_dsfm_adapter_projection.py  prepare_dsfm_base_predictions.py  run_dsfm_export_predictions.py
baseline_reproduction_methods/scripts/graphcodebert/: export_dsfm_processed_to_graphcodebert.py  finalize_graphcodebert_ojclone_full_adapter.py  requirements.txt  run_graphcodebert_gcj_official_length_lowmem_subset.ps1  run_graphcodebert_ojclone_cpp_dataflow_full_adapter.py  run_graphcodebert_ojclone_cpp_dataflow_smoke.py  run_graphcodebert_threshold_sweep.py
baseline_reproduction_methods/scripts/holmes/: build_holmes_ojclone_adapter.py  extract_holmes_subset.py  (+4 more)
baseline_reproduction_methods/source_snapshots/GraphCodeBERT/clonedetection/parser/tree-sitter-java/: Cargo.toml  grammar.js  package.json  pyproject.toml  tree-sitter.json
hardset_case_studies/: MANIFEST.json  MANIFEST.tsv  README.md
hardset_case_studies/provenance/: current_hardset_selection.json  current_hardset_selection.md
method/: ATTEST_METHODS_INDEX.md
method/attest_eviclone_system/: .env.example  ATTEST_PACKAGE_MANIFEST.json  README_CN.md  RUN_SMOKE.ps1
method/attest_exec_method/: .env.example  LICENSE  README.md  pytest.ini  requirements.txt
method/attest_gate_method/: README.md
method/attest_system/: .env.example  README.md  requirements.txt
(+194 files in other folders)
